<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Team 8</string>

    <!-- Login Form Strings -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Don\'t have an account? Register here</string>
    <string name="error_user_exists">This user already exists</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_password_mismatch">Passwords must match</string>
    <string name="error_incorrect_password">Your username or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="submit">Submit</string>
    <string name="title_login_activity">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
<<<<<<< HEAD
    <string name="action_settings" tools:keep="@string/action_settings">Settings</string>
    <string name="action_login">Already have an account? Log In</string>
    <string name="title_main_menu_activity">Donation Tracker App</string>
    <string name="title_activity_temp" tools:keep="@string/title_activity_temp">Sign in</string>
    <string name="title_register_account_activity">Register</string>
    <string name="preferences_file_key" tools:keep="@string/preferences_file_key">com.example.teamsplash.donationTracker.preferences</string>

    <!--New Item Form-->
    <string name="error_negative_value" tools:keep="@string/error_negative_value">Price cannot be negative</string>
    <string name="title_add_item_activity">Add New Item</string>
    <string name="title_item_detail_activity">Item Details</string>
    <string name="category" tools:keep="@string/category">CATEGORY</string>
    <string name="long_desc" tools:keep="@string/long_desc">DESCRIPTION</string>
    <string name="value" tools:keep="@string/value">PRICE</string>
=======
    <string name="action_login">Already have an account? Log In</string>
    <string name="title_main_menu_activity">Donation Tracker App</string>
    <string name="title_register_account_activity">Register</string>

    <!--New Item Form-->
    <string name="title_add_item_activity">Add New Item</string>
    <string name="title_item_detail_activity">Item Details</string>
>>>>>>> 9917c0a0e2d67b75b2a5c29e7d21950a7063086b

    <string name="short_description">Name</string>
    <string name="long_description">Description</string>
    <string name="item_value">Price</string>
    <string name="location_name">Location</string>
    <string name="time_stamp">Time Added:</string>

    <!--Navigation Strings-->
    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_locations">Locations</string>
    <string name="title_location_details_activity">Location Details</string>
    <string name="back">Go Back</string>
    <string name="location">LOCATION</string>
    <string name="phone">PHONE</string>
<<<<<<< HEAD
    <string name="website" tools:keep="@string/website">WEBSITE</string>
    <string name="latLong">LATITUDE/LONGITUDE</string>
    <string name="addItem" tools:keep="@string/addItem">Add New Item</string>
    <string name="inventory" tools:keep="@string/inventory">INVENTORY</string>
=======
    <string name="latLong">LATITUDE/LONGITUDE</string>
>>>>>>> 9917c0a0e2d67b75b2a5c29e7d21950a7063086b
    <string name="inventoryL">Inventory</string>
    <string name="view_inventory">View Inventory</string>
    <string name="search">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="locations">location description</string>
    <string name="logostuff">logo description</string>
</resources>
