<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.HomeScreen">

    <ImageView
        android:id="@+id/imageView"
        app:srcCompat="@mipmap/teamlogo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
<<<<<<< HEAD
        android:contentDescription="@string/logostuff" />
=======
        android:contentDescription="Team Logo image" />
>>>>>>> 9917c0a0e2d67b75b2a5c29e7d21950a7063086b
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="45dp"
        android:onClick="onClick"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

</android.support.constraint.ConstraintLayout>